@@ -68,18 +68,6 @@
 #define bool int
 #define true (1)
 #define false (0)
-#if ! MBS_SUPPORT
-#define wctype_t	int
-#define wint_t	int
-#define mbstate_t	int
-#define WEOF	EOF
-#define towupper	toupper
-#define towlower	tolower
-#define btowc(x)	(x)
-#define iswalnum	isalnum
-#define iswalpha	isalpha
-#define iswupper	isupper
-#endif /* ! MBS_SUPPORT */
 #endif /* GAWK */
 
 #include "regex.h"
@@ -92,74 +80,6 @@ is_blank (int c)
 {
    return (c == ' ' || c == '\t');
 }
-
-#if ! MBS_SUPPORT
-static const char *classes[] = {
-  	"<dummy>",
-	"alnum",
-	"alpha",
-	"blank",
-	"cntrl",
-	"digit",
-	"graph",
-	"lower",
-	"print",
-	"punct",
-	"space",
-	"upper",
-	"xdigit",
-	NULL
-};
-
-static wctype_t wctype(const char *name)
-{
-	int i;
-
-	for (i = 1; classes[i] != NULL; i++)
-		if (strcmp(name, classes[i]) == 0)
-			return i;
-
-	return 0;
-}
-
-static int iswctype(wint_t wc, wctype_t desc)
-{
-	int j = sizeof(classes) / sizeof(classes[0]);
-
-	if (desc >= j || desc == 0)
-		return 0;
-
-	switch (desc) {
-	case 1:		return isalnum(wc);
-	case 2:		return isalpha(wc);
-	case 3:		return is_blank(wc);
-	case 4:		return iscntrl(wc);
-	case 5:		return isdigit(wc);
-	case 6:		return isgraph(wc);
-	case 7:		return islower(wc);
-	case 8:		return isprint(wc);
-	case 9:		return ispunct(wc);
-	case 10:	return isspace(wc);
-	case 11:	return isupper(wc);
-	case 12:	return isxdigit(wc);
-	default:	return 0;
-	}
-}
-
-static int wcscoll(const wchar_t *ws1, const wchar_t *ws2)
-{
-	size_t i;
-
-	for (i = 0; ws1[i] != 0 && ws2[i] != 0; i++) {
-		if (ws1[i] < ws2[i])
-			return -1;
-		else if (ws1[i] > ws2[i])
-			return 1;
-	}
-
-	return (ws1[i] - ws2[i]);
-}
-#endif /* ! MBS_SUPPORT */
 #endif /* GAWK */
 
 /* HPUX, define those as macros in sys/param.h */
