@@ -111,3 +111,7 @@
 #ifndef HAVE_STRCOLL
 #include "missing_d/strcoll.c"
 #endif
+
+#if ! MBS_SUPPORT
+#include "missing_d/wcmisc.c"
+#endif
