@@ -1,3 +1,7 @@
+2011-11-01         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* wcmisc.c: New file.
+
 2011-06-23         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* ChangeLog.0: Rotated ChangeLog into this file.
